Fade-in images transitions forced through GPU to avoid iOS flickering.
For some reason, the opacity transition used for the fade-in effect
actually causes the screen to flicker once done. Adding a
-webkit-backface-visibility: hidden CSS property solves the problem.

--- a/app/less/desktop.less
+++ b/app/less/desktop.less
@@ -488,6 +488,9 @@ header {
     background-size: cover;
     background-position: center center;
     .transition(.7s ease-in-out all);
+
+    // Force the use of the GPU to avoid flickering on iOS
+    -webkit-backface-visibility: hidden;
   }
 
   .spinner {
